--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,8 @@
-.App {
-  text-align: center;
-}
+nav {
+  margin-bottom: 20px; }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
+.nav-tabs li a {
+  border-style: none;
+  border-radius: 0; }
+  .nav-tabs li a.active {
+    background-color: #eee; }
