--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,18 @@
+$color-grey-text: #aaa;
+
 nav {
   margin-bottom: 20px;
+
+  &.nav {
+    display: inline-block;
+  }
+}
+
+.nav-title {
+  float: left;
+  padding: 0 20px;
+  font-size: 25px;
+  color: $color-grey-text;
 }
 
 .nav-tabs li a {
@@ -9,5 +22,23 @@ nav {
   &.active {
     background-color: #eee;
   }
+}
+
+.post-container {
+  width: 85%;
+  margin: auto;
+  
+  .post-details {
+    color: $color-grey-text;
+
+    .author {
+      color: black;
+    }
+  }
+}
+
+
+.short-post-title {
+  font-size: 20px;
 }
 
