--- a/src/App.scss
+++ b/src/App.scss
@@ -53,7 +53,24 @@ nav {
       padding: 20px 0;
     }
   }
+
+  .reply-form {
+    width: 500px;
+    margin-bottom: 50px;
+  }
 }
 
+
+
+@media (max-width: 768px) {
+  .post-container {
+    background: red;
+    width: 90%;
+
+    .reply-form {
+      width: 100%;
+    }
+  }
+}
 
 
