--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,10 @@ nav {
 .nav-title {
   float: left;
   padding: 0 20px;
-  font-size: 25px;
-  color: #888; }
+  font-size: 25px; }
+  .nav-title a {
+    color: #888;
+    text-decoration: none; }
 
 .nav-tabs li a {
   border-style: none;
