--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@ nav {
   nav.nav {
     display: inline-block; }
 
+textarea {
+  resize: none; }
+
 .nav-title {
   float: left;
   padding: 0 20px;
