--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,34 @@
 a, a:hover {
   text-decoration: none; }
 
-nav {
-  margin-bottom: 20px; }
-  nav.nav {
-    display: inline-block; }
-
 textarea {
   resize: none; }
 
-.nav-title {
-  float: left;
-  padding: 0 20px;
-  font-size: 25px; }
-  .nav-title a {
-    color: #888;
-    text-decoration: none; }
-
-.nav-tabs li a {
-  border-style: none;
-  border-radius: 0; }
-  .nav-tabs li a.active {
-    background-color: #eee; }
-
 .post-container {
   width: 80%;
-  margin: auto;
-  margin-bottom: 50px; }
+  margin: 50px auto;
+  border: 1px solid #ccc; }
+  .post-container .short-post-container {
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid #ccc; }
+    .post-container .short-post-container .details {
+      width: 93%;
+      display: inline-block; }
+      .post-container .short-post-container .details .label-info {
+        margin-left: 20px;
+        padding: .2em; }
+      .post-container .short-post-container .details .post-details .post-time {
+        float: right; }
+    .post-container .short-post-container .icon {
+      font-size: 35px;
+      float: right; }
+    .post-container .short-post-container a h2 {
+      display: block;
+      min-width: 0;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis; }
   .post-container .post-details {
     color: #888; }
   .post-container .reply-section {
@@ -46,11 +48,14 @@ textarea {
       margin-bottom: 50px; }
       .post-container .reply-section .reply-form .reply-form-title {
         color: #888; }
-  .post-container .post-title, .post-container .page-title {
-    font-size: 20px; }
+  .post-container .post-title.list {
+    font-size: 20px;
+    margin: 0;
+    padding-bottom: 10px; }
   .post-container .page-title {
     color: #888;
-    padding-bottom: 10px; }
+    padding-bottom: 10px;
+    text-align: center; }
   .post-container .full-post .post-title {
     color: #888; }
   .post-container .full-post .post-text {
@@ -76,9 +81,21 @@ label {
 @media (max-width: 768px) {
   .post-container {
     width: 90%; }
-    .post-container .reply-section .reply-header, .post-container .post-title,
+    .post-container .short-post-container .icon {
+      display: none; }
+    .post-container .short-post-container .details {
+      width: 100%; }
+      .post-container .short-post-container .details .post-title.list {
+        font-size: 15px; }
+      .post-container .short-post-container .details .post-details {
+        font-size: 13px; }
+        .post-container .short-post-container .details .post-details .label-info {
+          float: right; }
+        .post-container .short-post-container .details .post-details .post-time {
+          display: none; }
+    .post-container .reply-section .reply-header,
     .post-container .page-title {
-      font-size: 17px; }
+      font-size: 20px; }
     .post-container .reply-section .reply-form, .post-container .post-form {
       width: 90%;
       margin: auto; }
