--- a/src/App.css
+++ b/src/App.css
@@ -67,21 +67,23 @@ textarea {
     color: #888;
     padding-bottom: 10px;
     text-align: center; }
-  .post-container .full-post .post-title-container .post-title {
-    color: #888;
-    margin-top: 0;
-    width: 75%;
-    display: inline-block; }
-  .post-container .full-post .post-title-container .top-back-button {
-    float: right; }
-  .post-container .full-post .post-text {
-    padding: 20px 0 40px; }
+  .post-container .full-post {
+    border-bottom: 1px solid #ccc; }
+    .post-container .full-post .post-title-container .post-title {
+      color: #888;
+      margin-top: 0;
+      width: 75%;
+      display: inline-block; }
+    .post-container .full-post .post-title-container .top-back-button {
+      float: right; }
+    .post-container .full-post .post-text {
+      padding: 20px 0; }
   .post-container .post-form {
     margin: auto; }
     .post-container .post-form form {
       padding: 20px; }
     .post-container .post-form .new-post-button-section {
-      padding: 0; }
+      padding: 20px 0 0; }
       .post-container .post-form .new-post-button-section button.add-post {
         margin-left: 20px; }
     .post-container .post-form .form-group.text-area {
@@ -97,7 +99,8 @@ label {
 
 @media (max-width: 768px) {
   .post-container {
-    width: 90%; }
+    width: 90%;
+    margin: 20px auto; }
     .post-container .new-post-button-section {
       text-align: center; }
     .post-container .short-post-container .icon {
@@ -119,6 +122,7 @@ label {
       display: block;
       width: 100%; }
       .post-container .reply-form .reply-form-fields button, .post-container .reply-form .reply-button button {
+        margin-top: 20px;
         width: 100%; }
     .post-container .post-form .form-group {
       text-align: center; }
