Add initial messaging for when there are no posts to start.

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@ a, a:hover {
 textarea {
   resize: none; }
 
+.initial-landing-message {
+  min-height: 300px;
+  text-align: center;
+  padding-top: 50px; }
+
 .post-container {
   width: 80%;
   margin: 50px auto;
