--- a/src/App.scss
+++ b/src/App.scss
@@ -11,6 +11,12 @@ textarea {
   resize: none;
 }
 
+.initial-landing-message {
+  min-height: 300px;
+  text-align: center;
+  padding-top: 50px;
+}
+
 .post-container {
   width: 80%;
   margin: 50px auto; 
