--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,9 @@ textarea {
   .post-container .reply-form .reply-button {
     width: 30%;
     display: inline-block;
-    text-align: center; }
+    text-align: center;
+    vertical-align: top;
+    margin-top: 60px; }
     .post-container .reply-form .reply-button button {
       width: 70%; }
   .post-container .post-title.list {
@@ -88,7 +90,7 @@ textarea {
     .post-container .post-form form {
       padding: 20px; }
     .post-container .post-form .new-post-button-section {
-      padding: 20px 0 0; }
+      padding: 40px 0 20px; }
       .post-container .post-form .new-post-button-section button.add-post {
         margin-left: 20px; }
     .post-container .post-form .form-group.text-area {
@@ -125,19 +127,21 @@ label {
       font-size: 20px; }
     .post-container .reply-form .reply-form-fields, .post-container .reply-form .reply-button {
       display: block;
-      width: 100%; }
+      width: 100%;
+      margin-top: 20px; }
       .post-container .reply-form .reply-form-fields button, .post-container .reply-form .reply-button button {
-        margin-top: 20px;
         width: 100%; }
-    .post-container .post-form .form-group {
+    .post-container .post-form {
       text-align: center; }
-    .post-container .post-form .new-post-button-section {
-      overflow: auto; }
-      .post-container .post-form .new-post-button-section button.cancel {
-        float: left; }
-      .post-container .post-form .new-post-button-section button.add-post {
-        margin: 0;
-        float: right; }
+      .post-container .post-form .form-group {
+        text-align: center; }
+      .post-container .post-form .new-post-button-section {
+        overflow: auto; }
+        .post-container .post-form .new-post-button-section button.cancel {
+          float: left; }
+        .post-container .post-form .new-post-button-section button.add-post {
+          margin: 0;
+          float: right; }
     .post-container .full-post-container .full-post .post-title-container .post-title {
       width: 100%; }
     .post-container .full-post-container .full-post .post-title-container .top-back-button {
